--- a/RefinId/RefinId.csproj
+++ b/RefinId/RefinId.csproj
@@ -34,6 +34,7 @@
     <Reference Include="System.Core" />
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Data" />
+    <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="DbLongIdStorageWithInstaller.cs" />
