Introduce new classes. Move several methods to TableCommandBuilder.

--- a/RefinId/RefinId.csproj
+++ b/RefinId/RefinId.csproj
@@ -38,6 +38,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="DbCommandExtensions.cs" />
     <Compile Include="SqlClientLongIdInstaller.cs" />
     <Compile Include="DefaultLongIdFactory.cs" />
     <Compile Include="ILongIdFactory.cs" />
@@ -47,6 +48,8 @@
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="DbLongIdStorage.cs" />
+    <Compile Include="TableCommandBuilder.cs" />
+    <Compile Include="TableParameters.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
