--- a/Refinid.Specs/Refinid.Specs.csproj
+++ b/Refinid.Specs/Refinid.Specs.csproj
@@ -44,11 +44,13 @@
     <Reference Include="System.Data" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ConnectionHelper.cs" />
     <Compile Include="DbLongIdStorageSpec.cs" />
     <Compile Include="DefaultLongIdFactorySpec.cs" />
     <Compile Include="LongIdSpec.cs" />
     <Compile Include="MultiThreadTestRunner.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SqlClientLongIdInstallerSpec.cs" />
     <Compile Include="TestStorage.cs" />
   </ItemGroup>
   <ItemGroup>
