--- a/RefinId/RefinId.csproj
+++ b/RefinId/RefinId.csproj
@@ -39,6 +39,10 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="DbCommandExtensions.cs" />
+    <Compile Include="InformationSchema\IUniqueKeysProvider.cs" />
+    <Compile Include="InformationSchema\UniqueKey.cs" />
+    <Compile Include="InformationSchema\UniqueKeysProvider.cs" />
+    <Compile Include="ISchemaAndTable.cs" />
     <Compile Include="SqlClientLongIdInstaller.cs" />
     <Compile Include="DefaultLongIdFactory.cs" />
     <Compile Include="ILongIdFactory.cs" />
@@ -49,7 +53,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="DbLongIdStorage.cs" />
     <Compile Include="TableCommandBuilder.cs" />
-    <Compile Include="TableParameters.cs" />
+    <Compile Include="Table.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
