--- a/Refinid.Specs/Refinid.Specs.csproj
+++ b/Refinid.Specs/Refinid.Specs.csproj
@@ -52,6 +52,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SqlClientLongIdInstallerSpec.cs" />
     <Compile Include="TestStorage.cs" />
+    <Compile Include="TestUniqueKeysProvider.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
