--- a/Refinid.Specs/Refinid.Specs.csproj
+++ b/Refinid.Specs/Refinid.Specs.csproj
@@ -7,7 +7,7 @@
     <ProjectGuid>{CB558D28-34F0-48A5-9765-DB5C0F650D2F}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Refinid.Specs</RootNamespace>
+    <RootNamespace>RefinId.Specs</RootNamespace>
     <AssemblyName>Refinid.Specs</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
